# nanoGPT

./: .gitignore  flake.nix  pyproject.toml  train.py
